# CTF-Tools

./: .gitmodules  CMakeLists.txt  Dockerfile  README.md
.gitea/ISSUE_TEMPLATE/: bug.yaml  feature.yaml
ldpreload_libs/: CMakeLists.txt  README.md
ldpreload_libs/fread/: fread.c
ldpreload_libs/noexit/: noexit.c
ldpreload_libs/nosleep/: README.md  nosleep.c
ldpreload_libs/ptrace/: ptrace.c
ldpreload_libs/strcmp/: README.md  strcmp.c
scripts/: caesar_cipher_cycle.sh  flag_search.sh  hashcrack.sh  magic_search.sh
tools/: CMakeLists.txt
tools/base_check/: base_check.c  base_filter.c  fuzz.sh  is_base.c  is_base.h
tools/caesar_cipher/: caesar_cipher.cpp
tools/char_manipulation/: char_manipulation.c
tools/hex_check/: hex_check.c
tools/vigenere_decode/: vigenere_decode.c
